--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@ body {
 /* HEADER / NAV BAR STYLES START */
 
 header {
+  padding: 20px 35px;
+  background-color: #39a6b2;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px 35px;
-  background-color: #39a6b2;
 }
 
 header h1 {
@@ -56,11 +56,11 @@ header nav ul li a {
 
 /* FOOTER STYLES START */
 footer {
+  background: #fce138;
+  padding: 40px 35px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  background: #fce138;
-  padding: 40px 35px;
   width: 100%;
 }
 
@@ -71,7 +71,6 @@ footer h2 {
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -96,13 +95,28 @@ section {
   flex-wrap: wrap;
 }
 
-.hero-form {
-  width: 40%;
+.hero-cta {
+  width: 35%;
+  text-align: right;
   margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
+
+.hero-form {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   color: #024e76;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -133,22 +147,7 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-}
-
-.hero-cta {
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.3;
-}
-
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: #fce138;
-}
+} 
 /* HERO STYLES END */
 
 
@@ -188,7 +187,6 @@ section {
 /* WHAT YOU DO STYLES START */
 .steps { 
   background: #fce138;
-  text-align: center;
 }
 
 .step {
@@ -209,7 +207,7 @@ section {
 }
 
 .step-info {
-  flex: 70%;
+  flex: 2 70%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -220,8 +218,17 @@ section {
   margin-right: 20px;
 }
 
+.step-img img {
+  max-width: 100%;
+}
+
 .step-text {
   flex: 12;
+}
+
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
 }
 
 .step-text h4 {
@@ -230,14 +237,6 @@ section {
   color: #024e76;
 }
 
-.step-text p {
-  color: #39a6b2;
-  font-size: 18px;
-}
-
-.step-img img {
-  max-width: 100%;
-}
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
@@ -245,7 +244,7 @@ section {
   width: 100%;
   margin: 0 auto;
   display: flex;
-  flex: wrap;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -295,7 +294,7 @@ section {
   flex-wrap: wrap;
 }
 
-.content-info > * {
+.contact-info > * {
   flex: 1;
   margin: 15px;
 }
@@ -320,10 +319,6 @@ section {
   font-style: normal;
 }
 
-.contact-info a {
-  color: #fce138;
-}
-
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
   display: block;
@@ -343,6 +338,10 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+}
+
+.contact-info a {
+  color: #fce138;
 }
 
 
