--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,21 +11,16 @@
 }
 
 body {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-family: Helvetica, Arial, sans-serif;
 }
 
-:root {
-  --primary-color: #fce138;
-  --secondary-color: #024e76;
-  --tetiary-color: #39a6b2;
-}
 
 /* HEADER / NAV BAR STYLES START */
 
 header {
   padding: 20px 35px;
-  background-color: var(--tetiary-color);
+  background-color: var(--tertiary-color);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -67,7 +68,7 @@ header nav ul li a {
 
 header nav ul li a:hover {
   background: var(--primary-color);
-  color: #024e76;
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -139,7 +140,7 @@ section {
   border: 3px solid var(--secondary-color);
   background-color: rgba(255, 225, 56, 0.8);
   padding: 20px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 40%;
   margin: 3.5%;
   border-radius: 15px;
@@ -147,7 +148,7 @@ section {
 }
 
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--tertiary-color);  
 }
 
 .hero-form h3 {
@@ -180,7 +181,7 @@ section {
 }
 
 .hero-form button {
-  color: #fce138;
+  color: var(--primary-color);
   background-color: var(--secondary-color);
   border: none;
   padding: 10px 20px;
@@ -189,7 +190,7 @@ section {
 } 
 
 .checkbox-wrapper input, .radio-wrapper input {
-  opacity: 0%;
+  opacity: 0;
 }
 
 .checkbox-wrapper label, .radio-wrapper label {
@@ -216,14 +217,14 @@ section {
 
 .radio-wrapper label::after {
   content: "";
-  width: 20px;
   height: 20px;
+  width: 20px;
   border-radius: 50%;
   background: var(--secondary-color);
   position: absolute;
   left: -29px;
   top: -3px;
-  background-image: radial-gradient(circle, #39a6b2, var(--secondary-color));
+  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
 }
 
 .checkbox-wrapper label::after {
@@ -233,7 +234,7 @@ section {
   border-left: 2px solid var(--secondary-color);
   border-bottom: 2px solid var(--secondary-color);
   position: absolute;
-  left: -25px;
+  left: -26px;
   top: 1px;
   transform: rotate(-58deg);
 }
@@ -247,7 +248,6 @@ section {
 .radio-wrapper input:checked + label::after {
   content: "";
 }
-
 /* HERO STYLES END */
 
 
@@ -255,7 +255,7 @@ section {
 .section-title {
   font-size: 48px;
   border-bottom: 3px solid;
-  color: #024e76;
+  color: var(--secondary-color);
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
@@ -267,15 +267,14 @@ section {
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-
 .intro p {
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
@@ -293,7 +292,6 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -331,7 +329,7 @@ section {
 }
 
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
@@ -384,11 +382,11 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  background: #024e76;
+  background: var(--secondary-color);
 }
 
 .contact h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info {
@@ -423,11 +421,11 @@ section {
 }
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -453,7 +451,7 @@ section {
 
 .contact-form button:hover {
   color: var(--primary-color);
-  background: #39a6b2;
+  background: var(--tertiary-color);
 }
 
 .contact-info a {
